[tool.poetry]
name = "tia project generator"
version = "0.1.0"
description = "This application helps you automate the creation of Siemens projects with TIA Portal"
authors = ["Igor Coraine <igor.coraine@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
